[package]
name = "dvb-tune"
version = "0.0.0-snapshot"
authors = ["Russel Winder <russel@winder.org.uk>"]
categories = ["command line applications"]
keywords = ["dvb", "tuner", "gstreamer"]
license = "GPL-3.0"
description = "dvb-tune is a command line application for generating a DVBv5 channels file from a DVBv5 transmitter file."
readme = "README.md"

[dependencies]
clap = "*"
dvbv5-sys = "*"
#dvbv5-sys = {git = "https://gitlab.com/Russel/rust-libdvbv5-sys"}
#dvbv5-sys = {path = "../../Public/Rust_Libdvbv5_Sys"}
dvbv5 = "*"
#dvbv5 = {git = "https://gitlab.com/Russel/rust-libdvbv5"}
#dvbv5 = {path = "../../Public/Rust_Libdvbv5"}
libc = "*"
